# Hospital-Resource-Allocation-Environment

./: Dockerfile  README.md  client.py  hf_blog.md  hf_upload_blog.py  inference.py  inference_advanced.py  inference_train.py  interactive_demo.py  models.py  openenv.yaml  patch_ui.py  pyproject.toml  requirements.txt
server/: app.py
